fixing spacing in boxes

--- a/src/components/Boxes.css
+++ b/src/components/Boxes.css
@@ -1,5 +1,5 @@
 .box1-pg1 ,.box2-pg1{
-    width: 100vw;
+    width: 70vw;
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 12px;
@@ -15,7 +15,11 @@
     }
     }
 .main-box-pg1{
-    width: 70vw;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     z-index: 11;
     position: absolute;
     bottom: 8vh;
